--- a/HTML5-CSS3-Exercicios-desafios/exercicios/ex007/html5.html
+++ b/HTML5-CSS3-Exercicios-desafios/exercicios/ex007/html5.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <p>
-        Eu moro na <address>Rua Olavo Pereira - São Paulo</address>
+        Eu moro na <address>Rua Augusto - São Paulo</address>
     </p>
 </body>
 </html>
