--- a/HTML5-CSS3-Exercicios-desafios/desafios-feitos/desafio5 - redes sociais/index.html
+++ b/HTML5-CSS3-Exercicios-desafios/desafios-feitos/desafio5 - redes sociais/index.html
@@ -13,9 +13,9 @@
     <h2>Como falar comigo?</h2>
     <ol>
         <ul type="disc">
-            <li><a href="https://www.instagram.com/wellington_cst/" target="_blank" rel="external"><img src="icone-instagram.png" alt=""><ins>/wellington_cst</ins></a> - Me siga no instagram</li>
+            ??? - Me siga no instagram</li>
 
-            <li><a href="https://www.linkedin.com/in/wellington-costa-4a3114194/" target="_blank" rel="external"><img src="icone-linkedin.png" alt=""><ins>/wellington-costa-4a3114194/</ins></a> - Me adicione no Linkedin</li>
+            ??? - Me adicione no Linkedin</li>
 
         </ul>
 
