add more extension videos

--- a/HTML5-CSS3-Exercicios-desafios/exercicios/ex011 - Imagens dinamicas e videos/index.html
+++ b/HTML5-CSS3-Exercicios-desafios/exercicios/ex011 - Imagens dinamicas e videos/index.html
@@ -23,10 +23,13 @@
         <p>Infelizmente seu navegador não consegue reproduzir áudio. <a href="midia/guanacast-33.mp3" download="guanacast-33.mp3" type="audio/mpeg">Clique aqui para baixar o arquivo MP3.</a></p>
     </audio>
     <!--MP3, WAV, OGG audios que funcionam na maioria dos navegadores-->
-    <h1>Video interno</h1>
+    <h1>Video hospedado localmente</h1>
     <video width="600" poster="img/limoes-capa.png" controls autoplay>
-        <source src="midia/meu-video.webm" type="video/webm">
-        
+        <source src="midia/meu-video-mp4.mp4" type="video/mp4">
+        <source src="midia/meu-video-m4v.m4v" type="video/m4v">
+        <source src="midia/meu-video-webm.webm" type="video/webm">
+        <source src="midia/meu-video-ogv.ogv" type="video/ogv">
+        <p>Seu navegador não tem compatibilidade com reprodutor de vídeos.</p>
     </video>
     <h1>Inserindo vídeos do Vimeo</h1>
     <iframe src="https://player.vimeo.com/video/197093965?h=7fbc516b5a" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
