--- a/HTML5-CSS3-Exercicios-desafios/desafios-feitos/desafio9 - videos/pagina4.html
+++ b/HTML5-CSS3-Exercicios-desafios/desafios-feitos/desafio9 - videos/pagina4.html
@@ -9,7 +9,9 @@
 <body style="background-color: rgb(29, 29, 29);">
     <h1 style="color: white; font-family: Arial, Helvetica, sans-serif;">Curso de Python</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/S9uPNppGsGo?si=AgW8dYoXpaKNA9h8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <p style="color: white; font-family: Arial, Helvetica, sans-serif;">Veja o curso completo</p>
+    <a href="https://www.youtube.com/watch?v=S9uPNppGsGo&list=PLvE-ZAFRgX8hnECDn1v9HNTI71veL3oW0" target="_blank">
+        <p style="color: white; font-family: Arial, Helvetica, sans-serif;">Veja o curso completo</p>
+    </a>
     <a href="index.html" rel="prev"><img src="icone/android-chrome-192x192.png" width="50px" alt="Voltar"></a>
 </body>
 </html>
