--- a/HTML5-CSS3-Exercicios-desafios/exercicios/ex013 - estilos CSS inline/index.html
+++ b/HTML5-CSS3-Exercicios-desafios/exercicios/ex013 - estilos CSS inline/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estilos Inline</title>
 </head>
-<body>
-    <h1>Capítulo 1</h1>
-    <h2>Capítulo 1.1</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore aut, id libero facere impedit enim voluptatem ad sed explicabo quibusdam consequuntur, perferendis neque voluptate saepe. Nam in aperiam hic repudiandae.</p>
-    <h2>Capítulo 1.2</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi blanditiis in quo non libero voluptates et, neque voluptas veniam eius, sunt placeat, doloribus ut amet distinctio vitae nesciunt ullam dolorem?</p>
-    <h1>Capítulo 2</h1>
-    <h2>Capítulo 2.1</h2>
+<body style="background-color: bisque; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 20px;">
+    <h1 style="color: brown; background-color: cadetblue; font-size: 1.5em;">Capítulo 1</h1>
+    <h2 style="color: teal; font-size: 1.2em;">Capítulo 1.1</h2>
+    <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore aut, id libero facere impedit enim voluptatem ad sed explicabo quibusdam consequuntur, perferendis neque voluptate saepe. Nam in aperiam hic repudiandae. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident unde nulla rerum, quibusdam adipisci commodi modi reiciendis iste libero, aspernatur hic corrupti! Porro aspernatur in minima cum libero, ipsum distinctio.</p>
+    <h2 style="color: teal; font-size: 1.2em;">Capítulo 1.2</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi blanditiis in quo non libero voluptates et, neque voluptas veniam eius, sunt placeat, doloribus ut amet distinctio vitae nesciunt ullam dolorem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis distinctio dolorum voluptatum, culpa eligendi accusantium expedita quas temporibus ducimus amet, mollitia ipsa officia iusto recusandae in excepturi dicta alias.</p>
+    <h1 style="color: brown; font-size: 1.5em;">Capítulo 2</h1>
+    <h2 style="color: teal; font-size: 1.2em;">Capítulo 2.1</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae id dolores explicabo, vitae rem deserunt facere aut eveniet, totam doloremque ea, tempore temporibus. Quae eveniet adipisci, quia qui assumenda et?</p>
 </body>
 </html>
