--- a/HTML5-CSS3-Exercicios-desafios/exercicios/ex015 - estilos CSS externos/index.html
+++ b/HTML5-CSS3-Exercicios-desafios/exercicios/ex015 - estilos CSS externos/index.html
@@ -6,6 +6,8 @@
     <title>Estilos Externos</title>
     <link rel="stylesheet" href="style.css">
     <!--Podemos usar mais de um link de estilo, eles serão somados a pagina selecionada-->
+
+    <!--Dentro do style ficam os SELETORES, NÃO SÃO PARÂMETROS, errei essa questão de bobeira rs.-->
     <style>
         h1{
             text-decoration: underline;
